--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -37,6 +37,13 @@
                                          <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
                                     </div>
                                 </div>
+<div class="form-group">
+                                    <label class="col-sm-4 control-label">Numero de acuerdo:</label>
+                                    <div class="col-sm-7">
+                                        <p class="form-control-static" th:text="${cuadrodirectivo.acuerdocuadrodirectivo}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Área a que pertenece:</label>
                     <div class="col-sm-7">
