--- a/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
+++ b/src/main/resources/templates/fragments/experiencialaboral/experienciaform.html
@@ -58,8 +58,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
     
         <br>
-        <form class="form-horizontal" id="puesto" >
-               <!--th:object="${puesto}" -->
+<!--        <form class="form-horizontal" id="puesto" >
+               th:object="${puesto}" 
             
             <div class="col-md-12" style="background-color:#d9edf7;">
                 <div class="panel-info">
@@ -68,7 +68,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                 </div>
             </div>
-            </form>
+            </form>-->
           <form class="form-horizontal" id="formempleado" th:object="${empleado}" >
             
             <div class="col-md-12" style="background-color:#d9edf7;">
