--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -33,6 +33,12 @@
                         <p class="form-control-static" th:text="${puesto.nombrepuesto}">Nombre de Puesto</p>
                     </div>
                 </div>
+                     <div class="form-group">
+                    <label class="col-sm-5 control-label">Numero de acuerdo:</label>
+                    <div class="col-sm-7">
+                        <p class="form-control-static" th:text="${puesto.acuerdo}">Nombre de Puesto</p>
+                    </div>
+                </div>
                       <div class="form-group">
                     <label class="col-sm-5 control-label">Categoria de puesto:</label>
                     <div class="col-sm-7">
