--- a/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoshowcons.html
@@ -190,6 +190,12 @@
                                    <span th:if="${empleado.estadoempleado} == 1"  th:text="Activo"  ></span> <span th:if="${empleado.estadoempleado} == 2"  th:text="Indemnizado"></span> <span th:if="${empleado.estadoempleado} == 3"  th:text="Pensionado"></span> <span th:if="${empleado.estadoempleado} == 4"  th:text="Despedido"></span> <span th:if="${empleado.estadoempleado} == 0"  th:text="De Baja"></span> </p>
                             </div>
                         </div>
+<div class="form-group">
+                            <label class="col-sm-7 control-label">Puesto del empleado:</label>
+                            <div class="col-sm-5">
+                                <p class="form-control-static" id="nombrepuesto" > nombrepuesto</p>
+                            </div>
+                        </div>
                     </div> 
                 </form>
                 <div >
@@ -677,6 +683,9 @@
 </body>
 <script th:inline="javascript">
     $(document).ready(function () {
+        var puesto ='[[${nombrepuesto}]]' ;
+          puesto=puesto.replace('"','');
+          $('#nombrepuesto').text(puesto.replace('"',''));
         $('.tablita').DataTable({
             "language": {
                 "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
