--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_costocapacitacion.jrxml
@@ -12,7 +12,10 @@
 	<queryString>
 		<![CDATA[SELECT  co.`numeropersona` as 'Cantidad de Personas',c.nombrecapacitacion as 'Tema',co.`costopersona` as'Costo por Persomna', (`costocapacitador`+(`numeropersona`*`costopersona`)) as 'Costo Total'
 FROM `costocapacitacion`co,capacitacion c
-WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
+WHERE co.`codigocapacitacion`=c.`codigocapacitacion` and 
+c.fechacapacitaciondesde>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
+and c.fechacapacitaciondesde<=STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')
+and co.estadocostocapacitacion=1]]>
 	</queryString>
 	<field name="Cantidad de Personas" class="java.lang.Integer"/>
 	<field name="Tema" class="java.lang.String"/>
@@ -160,21 +163,21 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 			</rectangle>
 			<staticText>
 				<reportElement mode="Transparent" x="69" y="0" width="55" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="6e8d1fb5-782e-4959-b128-fe72caa411fc"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nº  Personas]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="126" y="0" width="179" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="d7150423-edf8-4a88-a50a-33666c6f26d6"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tema]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="305" y="0" width="76" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="3a2220b7-0367-4a79-99d1-35ea6c6bcbab"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Costo Persona($)]]></text>
@@ -190,7 +193,7 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 			</line>
 			<staticText>
 				<reportElement mode="Transparent" x="382" y="0" width="84" height="14" forecolor="#000000" backcolor="#E6E6E6" uuid="b6ead696-335c-474a-85ff-2cb3431470c8"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Costo Total($)]]></text>
@@ -207,7 +210,7 @@ WHERE co.`codigocapacitacion`=c.`codigocapacitacion`]]>
 				<textFieldExpression><![CDATA[$F{Cantidad de Personas}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="143" y="0" width="162" height="14" forecolor="#000000" uuid="4c370320-c883-447f-8ca7-cb444ec7f196"/>
+				<reportElement positionType="Float" stretchType="RelativeToTallestObject" mode="Transparent" x="126" y="0" width="179" height="14" forecolor="#000000" uuid="4c370320-c883-447f-8ca7-cb444ec7f196"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
