--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_exonerado.jrxml
@@ -12,7 +12,10 @@
 	<queryString>
 		<![CDATA[SELECT concat(e.nombreempleado,' ',e.apellidoempleado) as 'Nombre',p.nombrepuesto as 'Nombre de Puesto',u.nombreubicacion as 'Ubicacion',c.acuerdocuadrodirectivo as'No. Acuerdo' , DATE_FORMAT(c.fechapresentaciondesde, "%d/ %m /%Y") as 'Fecha Desde', DATE_FORMAT(c.fechapresentacionhasta, "%d/ %m /%Y") as 'Fecha Hasta' FROM `empleado` e, puesto p , ubicacionfisica u, cuadrodirectivo c WHERE e.codigopuesto=p.codigopuesto and e.codigoempleado=u.codigoempleado and e.codigoempleado=c.codigoempleado and e.estadoempleado in(1,3)
 and c.fechapresentaciondesde >= STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y')
-and c.fechapresentaciondesde <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
+and c.fechapresentaciondesde <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')
+and u.estadoubicacion=1
+and c.estadocuadrodirectivo=1
+and p.estadopuesto<>0]]>
 	</queryString>
 	<field name="Nombre" class="java.lang.String"/>
 	<field name="Nombre de Puesto" class="java.lang.String"/>
@@ -147,21 +150,21 @@ and c.fechapresentaciondesde <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			</rectangle>
 			<staticText>
 				<reportElement mode="Transparent" x="48" y="0" width="123" height="14" forecolor="#000000" backcolor="#FFFFFF" uuid="205a559b-9657-4fce-80ce-1d882cfe015f"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre del Empleado]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="259" y="0" width="67" height="14" forecolor="#000000" backcolor="#FFFFFF" uuid="9c687834-39c9-4409-85ce-0032a30c7e5b"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ubicación]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="328" y="0" width="55" height="14" forecolor="#000000" backcolor="#FFFFFF" uuid="bcfdcd2e-248c-42dc-af01-839b6a2142db"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[No. Acuerdo]]></text>
@@ -175,14 +178,14 @@ and c.fechapresentaciondesde <= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="444" y="0" width="60" height="14" forecolor="#000000" backcolor="#FFFFFF" uuid="2c1ab128-9a36-455a-a3ae-a603af474896"/>
-				<textElement textAlignment="Justified" verticalAlignment="Middle">
+				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Hasta]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="176" y="0" width="79" height="14" forecolor="#000000" backcolor="#FFFFFF" uuid="315aaa56-a6f9-4c04-9498-a3fe2b39c0c3"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement verticalAlignment="Middle">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre de Puesto]]></text>
